// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`register button functionality - failure (async) 1`] = `
<div
  className="menu-window"
>
  <form
    onSubmit={[Function]}
  >
    <ul
      className="menu bg-dark w-100"
    >
      <h4
        className="mb-5"
      >
        <span
          className="menu-header"
        >
          New User Registration
        </span>
      </h4>
      <li
        className="mb-3"
      >
        <input
          className="input-group-sm form-control"
          name="userName"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="User Name"
          required={true}
          type="text"
          value="other"
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li
        className="mb-3"
      >
        <input
          className="input-group-sm form-control"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Email Address"
          required={true}
          type="email"
          value="other@gmail.com"
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li>
        <input
          className="input-group-sm form-control"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
          value="111111"
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li>
        <button
          className="btn btn-primary form-control mt-3"
          disabled={false}
          type="submit"
        >
          Register
        </button>
      </li>
      <li
        className="mt-2 mb-4"
      >
        <Link
          className="float-right"
          to="/home/login"
        >
          <LinkAnchor
            className="float-right"
            href="/home/login"
            navigate={[Function]}
          >
            <a
              className="float-right"
              href="/home/login"
              onClick={[Function]}
            >
              Already registered? log in
            </a>
          </LinkAnchor>
        </Link>
      </li>
      <li>
        <label>
          <span
            className="badge badge-danger"
          >
            Error
          </span>
        </label>
      </li>
    </ul>
  </form>
</div>
`;

exports[`register button functionality - success (async) 1`] = `""`;

exports[`renders correctly 1`] = `
<div
  className="menu-window"
>
  <form
    onSubmit={[Function]}
  >
    <ul
      className="menu bg-dark w-100"
    >
      <h4
        className="mb-5"
      >
        <span
          className="menu-header"
        >
          New User Registration
        </span>
      </h4>
      <li
        className="mb-3"
      >
        <input
          className="input-group-sm form-control"
          name="userName"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="User Name"
          required={true}
          type="text"
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li
        className="mb-3"
      >
        <input
          className="input-group-sm form-control"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Email Address"
          required={true}
          type="email"
          value=""
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li>
        <input
          className="input-group-sm form-control"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
          value=""
        />
        <label
          className="error badge badge-danger"
        />
      </li>
      <li>
        <button
          className="btn btn-primary form-control mt-3"
          disabled={false}
          type="submit"
        >
          Register
        </button>
      </li>
      <li
        className="mt-2 mb-4"
      >
        <Link
          className="float-right"
          to="/home/login"
        >
          Already registered? log in
        </Link>
      </li>
    </ul>
  </form>
</div>
`;
